# vueCPI

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
frontend/: .env  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: CenterTemplate.vue  CountryItemWeight.vue  CountryWeight.vue  FractionDisplay.vue  HierarchicalTable.vue  SingleTimeSeries.vue
