[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Thomas Kientz <thomas@kientz.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
pandas = "^2.0.3"
flask-cors = "^4.0.0"
cpilib = "^0.2.2"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
